cambios base de datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,21 @@ server.port=8080
 spring.application.name=concesionario
 
 # Conexión a base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/concesionario
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/concesionario
+#spring.datasource.username=root
 #spring.datasource.password=12345678
-spring.datasource.password=Irso1234.
+#spring.datasource.password=Irso1234.
+#generate optimization hibernate SQL
+#spring.jpa.properties.hibernate.format_sql=true
+#update database and create entities
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto = update
+
+# Conexión a base de datos Heroku
+spring.datasource.url=jdbc:mysql://us-cdbr-east-04.cleardb.com:3306/heroku_a0cc4fe008d0671
+spring.datasource.username=bf6e2dd955acb2
+#spring.datasource.password=12345678
+spring.datasource.password=9bda315f
 spring.jpa.properties.hibernate.format_sql=true
 #generate optimization hibernate SQL
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
